--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity" 
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".MainActivity"
 	android:orientation="vertical" >
 
     <Button
@@ -10,66 +10,92 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_basic_courtesy" 
-        android:onClick="toggleBasicCourtesy"/>
+        android:onClick="toggleBasicCourtesy" />
     	<Button
     	    android:id="@+id/button_good_morning"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_good_morning"
-	        android:onClick="playGoodMorning" />
-	    <Button
+	        android:tag="RAW_ENUM_GOOD_MORNING" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
+    	
+    	<Button
     	    android:id="@+id/button_good_afternoon"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_good_afternoon"
-	        android:onClick="playGoodAfternoon"/>
+	        android:tag="RAW_ENUM_GOOD_AFTERNOON" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	    <Button
     	    android:id="@+id/button_good_evening"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_good_evening"
-	        android:onClick="playGoodEvening"/>
+	        android:tag="RAW_ENUM_GOOD_EVENING" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
     	<Button
     	    android:id="@+id/button_excuse_me"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_excuse_me"
-	        android:onClick="playExcuseMe"/>
+	        android:tag="RAW_ENUM_EXCUSE_ME" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	   <Button
     	    android:id="@+id/button_good_day"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_good_day"
-	        android:onClick="playHaveAGoodDay"/>
+	        android:tag="RAW_ENUM_HAVE_A_GOOD_DAY" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	   <Button
     	    android:id="@+id/button_please"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_please"
-	        android:onClick="playPlease"/>
+	        android:tag="RAW_ENUM_PLEASE" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	   <Button
     	    android:id="@+id/button_thank_you"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_thank_you"
-	        android:onClick="playThankYou"/>
+	        android:tag="RAW_ENUM_THANK_YOU"
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	   <Button
     	    android:id="@+id/button_im_sorry"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_im_sorry"
-	        android:onClick="playImSorry"/>
+	        android:tag="RAW_ENUM_IM_SORRY" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />
 	   <Button
     	    android:id="@+id/button_thank_patience"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/button_thank_patience"
-	        android:onClick="playThankPatience"/>	   	    
+	        android:tag="RAW_ENUM_THANK_PATIENCE" 
+	        android:visibility="gone"
+	        android:onClick="playFile" />	   	    
 	<Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_introduction" />    
-    <Button
+	   <Button
+    	    android:id="@+id/button_do_speak_english"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/button_do_speak_english"
+	        android:tag="RAW_ENUM_DO_SPEAK_ENGLISH" 
+	        android:onClick="playFile" />	   	    
+	<Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/button_assessment" />    
@@ -126,4 +152,3 @@
         android:layout_height="wrap_content"
         android:text="@string/button_numbers" />    
 </LinearLayout>
-
